feat(#9): do todos
