# docs/swagger.json
@@ -70,7 +70,7 @@
                     }
                 }
             },
-            "post": {
+            "put": {
                 "consumes": [
                     "application/json"
                 ],
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/routes.PutERResponse"
+                            "$ref": "#/definitions/routes.GetSingleERResponse"
                         }
                     },
                     "501": {
@@ -194,7 +194,7 @@
         }
     },
     "definitions": {
-        "models.Department": {
+        "models.DepartmentBase": {
             "type": "object",
             "properties": {
                 "id": {
@@ -202,55 +202,53 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "neededInEmergencies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Emergency"
-                    }
-                },
-                "rooms": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.EmergencyRoom"
-                    }
                 }
             }
         },
-        "models.Emergency": {
+        "models.Point": {
             "type": "object",
             "properties": {
-                "emergencyRoom": {
-                    "$ref": "#/definitions/models.EmergencyRoom"
+                "lat": {
+                    "type": "number"
                 },
-                "emergencyRoomID": {
-                    "description": "explicitly set the FK to NULL, else PG is confused",
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "neededDepartments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Department"
-                    }
-                },
-                "startLoc": {
-                    "$ref": "#/definitions/models.Point"
-                },
-                "timeStamp": {
-                    "type": "string"
+                "long": {
+                    "type": "number"
                 }
             }
         },
-        "models.EmergencyRoom": {
+        "routes.GetMultipleERsResponse": {
+            "type": "object",
+            "properties": {
+                "emergencyRooms": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/routes.GetSingleERResponse"
+                    }
+                },
+                "lastPage": {
+                    "type": "boolean"
+                },
+                "numPages": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "totalSite": {
+                    "type": "integer"
+                }
+            }
+        },
+        "routes.GetSingleERResponse": {
             "type": "object",
             "properties": {
                 "departments": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Department"
+                        "$ref": "#/definitions/models.DepartmentBase"
                     }
                 },
                 "displayableAddress": {
@@ -272,37 +270,6 @@
                     "type": "integer"
                 }
             }
-        },
-        "models.Point": {
-            "type": "object",
-            "properties": {
-                "x": {
-                    "type": "number"
-                }
-            }
-        },
-        "routes.GetMultipleERsResponse": {
-            "type": "object",
-            "properties": {
-                "lastPage": {
-                    "type": "boolean"
-                },
-                "numPages": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "type": "integer"
-                },
-                "totalSite": {
-                    "type": "integer"
-                }
-            }
-        },
-        "routes.GetSingleERResponse": {
-            "type": "object"
         },
         "routes.HTTPError": {
             "type": "object",
@@ -337,13 +304,10 @@
                 "departments": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Department"
+                        "$ref": "#/definitions/models.DepartmentBase"
                     }
                 },
                 "displayableAddress": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "location": {
@@ -359,9 +323,6 @@
                     "type": "integer"
                 }
             }
-        },
-        "routes.PutERResponse": {
-            "type": "object"
         },
         "routes.StatusResponse": {
             "type": "object",
